# compute-backend

./: .gitignore  Cargo.toml  Makefile  agents.md  go.mod  go.sum
.github/workflows/: runner-qwen-ci.yml
.gocache/00/: 0000e8378d19792db0157609b72ac161f29cbf5e7b696a3caefef95b76c7b9ac-a  0034915bdcc7c74ba3b044489ed80df383b4bfee1c1c8ca00e29af2d7ab93f79-a  008bcd8c1bc95ff286484fd76c2ea59c977a12f868fb569fe7b88c10dde96f00-d
.gocache/01/: 013e20b7ec6dfbb3f7f36928f7972911112daf6bb16018f53330a21eae72bc55-a
.gocache/02/: 02117dbe00154cbd19370fb839f2f5bb2578dea848f3b699d66b08297cf9ece3-a  02c5b73d59cd2b9185c120d9e2f19810f4d875d2c453c6a35bc1366bfc8e0bc9-a  02e6598954e5251c00508e96b73e04e3c2be0437c9c539eed9e59e2b2c9a83ac-a
.gocache/04/: 04c7dd96040ad9541d336c1171a6623752f4c0e78c2c4bbcc93c690ca3e69488-a
.gocache/07/: 0718d165e4b34c1be12c38072ffb63de1088103aba55296d71da52a800fac224-a  079fcd1d354f0c9e8901324b37f019e354fc279d647f2002d32090d951504d04-d
.gocache/08/: 0864ff2e4f2aec61e00536fc2adfc7258f0ae419818468457f3975ee8e3bd1f7-a  0866a0e04e27ef903618e2b6ae9f60aec79cc64a40e7b7a5395383388a95f50c-a  08c9428864651a04a777a079bf208487a13a5949144b89cf38784cf6a49dc271-a
.gocache/0a/: 0a71da8afd7274388c789c8e70c0ecd1a2e056b1fe6be15c3ca5726dd0d9d429-a
.gocache/0b/: 0b79ff3096f7b5efed5fb0b460bdb93d69c4dc68d3decc909e4c3fecfdec2fbe-a  0bb04464ec8f2d2d6c761372495c095f6883e6aeeea2a02cfbb5447344a2a4e7-a
.gocache/0c/: 0c96ad5b1232fa58f953d8a87c2ffd3e22626a4efff78a42a766e73f838e7e8c-a
.gocache/0d/: 0df5cb1af233efafb490bd93cb6679a0412a66c8f978ba1eb9d6d22e413e95aa-a
.gocache/0e/: 0e58352feb180f5dc59b1362eba0247676cebe941f64366495de2cbb60fcced5-a
.gocache/0f/: 0f15ca67120859d4e1f96caa2ebcf1e127d8c8d78711d181213a2d559a93d542-a  0f741eab28e05e03f3f7ab633d96d3e453eb9a4f9b2337e4373f74602c3d7e74-a  0fc1729a328f2d6a3b733a06fb65802f7c3c01e398d6eed33684bf2dbf85c7a7-a
.gocache/10/: 101bfc7808e8b48df5d49035b3b8891897f89435a072b78c051cf45d77d75c9b-a  10b23aa4f1670c12788dd451824976997448f11cc7cb4301afe1d43289886c89-a
.gocache/12/: 1212e8e71346f751f173d66ef79c9765348a0a97a7b05b3fd8cd4de49d0c230c-a
.gocache/13/: 13d9b50e79672e8e57fa744b484ef271ce00e0814e4954794100261c043b8a01-a
.gocache/14/: 149d6587a9f83547c0e44da9d0f1d0fe93acae7895ab96672e22b8aec289366e-a  14e18634eb4f5a67f02bf7210eaf24510ca569e569484001c6ccab38bc41ca73-a
.gocache/16/: 1613aa1823a274e384a822baea8fa7b8cec12d8546a1aedaa7f4d624d09046cc-a  163659cd3b7598e7cab41e740ea4d08bb171d74592bf6849c082ee3264fb386d-a
configs/: config.yaml
deploy/: ADMIN_DASHBOARD_GUIDE.md  COMPLETE_SETUP_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  FLUX_RUNNER_STATUS.md  GPU_NODE_SETUP.md  QUICK_START.md  build-all.sh  docker-compose-node.yml  docker-compose-production.yml  docker-compose-simple.yml  docker-compose.yml  gpu-node-setup.sh  submit-job-to-gpu-node.sh
docs/: api_reference.md  control_plane.md  development.md  implementation_plan.md  infrastructure.md  openapi.yaml  phase2_backend_foundations.md  phase2c_orchestrator_artifacts.md  platform_audit.md  system_design.md
orchestrator/: Cargo.toml
orchestrator/src/: config.rs  control_plane.rs  main.rs  registry.rs  state.rs
runner-flux/: Dockerfile  Makefile  README.md  requirements-dev.txt  requirements-gpu.txt  requirements.txt  runner-manifest.yaml
runner-qwen/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  run_worker.py
runner-qwen/app/: main.py  worker.py
runner-qwen/tests/: test_health.py
runners/: pyproject.toml
runners/qwen_image/: app.py
runners/template/: Dockerfile  Makefile  README.md  requirements.txt  runner-config.yaml
runners/template/app/: backend_factory.py  main.py  types.py  worker.py
runners/video_to_audio/: app.py
runners/wan_video/: app.py
scripts/: build-runner.sh  new-runner.sh
(+366 files in other folders)
