[project]
name = "runner-qwen"
version = "0.3.0"
description = "Vyvo Qwen image inference runner"
authors = [{ name = "Vyvo Engineering", email = "eng@vyvo.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.112",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "loguru>=0.7",
    "dashscope>=1.14.1",
    "diffusers>=0.29",
    "accelerate>=0.31",
    "transformers>=4.40",
    "safetensors>=0.4",
    "Pillow>=10.3",
    "minio>=7.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
