[tool.poetry]
name = "vyvo-runners"
version = "0.1.0"
description = "Runner services for Vyvo Compute"
authors = ["Vyvo Engineering <eng@vyvo.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = { version = "^0.30", extras = ["standard"] }
grpcio = "^1.66"
protobuf = "^5.27"
httpx = "^0.27"
redis = "^5.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5"
pytest = "^8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
